--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "markdown-it": "^7.0.0",
     "mocha": "^2.5.3",
     "path-to-regexp": "^1.5.3",
+    "phridge": "^2.0.0",
     "pixrem": "^3.0.1",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.1.0",
@@ -64,6 +65,7 @@
     "postcss-nesting": "^2.3.1",
     "postcss-selector-matches": "^2.0.1",
     "postcss-selector-not": "^2.0.0",
+    "prerender": "^4.0.10",
     "react-hot-loader": "^3.0.0-beta.2",
     "s3": "^4.4.0",
     "style-loader": "^0.13.1",
