--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,20 @@ npm-debug.log
 
 # Firebase
 firebase-debug.log
+
+
+#####=== OSX ===#####
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
