--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
+    "async": "^2.0.1",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -47,10 +48,11 @@
     "front-matter": "^2.1.0",
     "highlight.js": "^9.5.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.14.1",
     "markdown-it": "^7.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.5.3",
     "path-to-regexp": "^1.5.3",
-    "phridge": "^2.0.0",
     "pixrem": "^3.0.1",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.1.1",
@@ -67,6 +69,7 @@
     "postcss-selector-not": "^2.0.0",
     "prerender": "^4.0.10",
     "react-hot-loader": "^3.0.0-beta.2",
+    "request": "^2.74.0",
     "s3": "^4.4.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.0.3",
